--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                 <button>
                     <img src="./icons/avatar.avif" alt="user-avatar">
                 </button>
-                <span>User Name</span>
+                <span>Nghia</span>
             </section>
         </section>
 
         <section id="menu-bar">
             <section id="welcome-user">
-                <img alt="user-avatar">
-                <p>Hello User</p>
+                <img src="./icons/avatar.avif" alt="user-avatar">
+                <span>Hello Nghia</span>
             </section>
 
             <section id="buttons-list">
@@ -55,27 +55,80 @@
     <main id="main">
         <section id="projects">
             <h2>Your projects</h2>
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
+            <article>
+                <h3>Project Sign Up Form</h3>
+                <p>The basic form created by html, css and js</p>
+                <a href="https://github.com/TranTrungNghiaDev/Project-Sign-up-Form">
+                    <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+                </a>
+            </article>
+            <article>
+                <h3>Project Landing Page</h3>
+                <p>The basic langding page create by html and css</p>
+                <a href="https://github.com/TranTrungNghiaDev/Project-Landing-Page" target="_blank">
+                    <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+                </a>
+            </article>
+            <article>
+                <h3>Project Calculator</h3>
+                <p>The basic calculator page created by html, css and js</p>
+                <a href="https://github.com/TranTrungNghiaDev/Project-Calculator">
+                    <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+                </a>
+            </article>
+            <article>
+                <h3>Project Admin Dashboard</h3>
+                <p>The beautiful admin dashboard create by html and css</p>
+                <a>
+                    <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+                </a>
+            </article>
         </section>
 
         <section id="announcements">
             <h2>Announcements</h2>
-            <article></article>
-            <article></article>
-            <article></article>
+            <article>
+                <h4>Site Maintence</h4>
+            </article>
+            <article>
+                <h4>Community Share Day</h4>
+            </article>
+            <article>
+                <h4>Updated Privacy Policy</h4>
+            </article>
         </section>
 
         <section id="trending">
             <h2>Trending</h2>
-            <aticle></aticle>
-            <aticle></aticle>
-            <aticle></aticle>
-            <aticle></aticle>
+            <article>
+                <img src="./icons/avatar.avif" alt="author-avatar" class="author-avatar">
+                <h4>@Nghia</h4>
+                <p>
+                    <a href="https://github.com/TranTrungNghiaDev/Project-Sign-up-Form">
+                        Project Sign Up Form
+                    </a>
+                </p>
+            </article>
+
+            <article>
+                <img src="./icons/avatar.avif" alt="author-avatar" class="author-avatar">
+                <h4>@Nghia</h4>
+                <p>
+                    <a href="https://github.com/TranTrungNghiaDev/Project-Calculator">
+                        Project Calculator
+                    </a>
+                </p>
+            </article>
+
+            <article>
+                <img src="./icons/avatar.avif" alt="author-avatar" class="author-avatar">
+                <h4>@Nghia</h4>
+                <p>
+                    <a href="https://github.com/TranTrungNghiaDev/Project-Landing-Page">
+                        Project Langding Page
+                    </a>
+                </p>
+            </article>
         </section>
     </main>
     <aside id="dashboard">
