--- a/index.html
+++ b/index.html
@@ -53,83 +53,86 @@
     </header>
 
     <main id="main">
-        <section id="projects">
+        <section id="project-container">
             <h2>Your projects</h2>
-            <article>
-                <h3>Project Sign Up Form</h3>
-                <p>The basic form created by html, css and js</p>
-                <a href="https://github.com/TranTrungNghiaDev/Project-Sign-up-Form">
-                    <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+            <section id="projects">
+                <article>
+                    <h3>Project Sign Up Form</h3>
+                    <p>The basic form created by html, css and js</p>
+                    <a href="https://github.com/TranTrungNghiaDev/Project-Sign-up-Form" target="_blank">
+                        <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+                    </a>
+                </article>
+                <article>
+                    <h3>Project Landing Page</h3>
+                    <p>The basic langding page create by html and css</p>
+                    <a href="https://github.com/TranTrungNghiaDev/Project-Landing-Page" target="_blank">
+                        <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+                    </a>
+                </article>
+                <article>
+                    <h3>Project Calculator</h3>
+                    <p>The basic calculator page created by html, css and js</p>
+                    <a href="https://github.com/TranTrungNghiaDev/Project-Calculator" target="_blank">
+                        <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+                    </a>
+                </article>
+                <article>
+                    <h3>Project Admin Dashboard</h3>
+                    <p>The beautiful admin dashboard create by html and css</p>
+                    <a href="https://github.com/TranTrungNghiaDev/Project-Admin-Dashboard" target="_blank">
+                        <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+                    </a>
+                </article>
+            </section>
+
+        </section>
+
+        <section id="another-container">
+            <div id="announcements">
+                <h2>Announcements</h2>
+                <article>
+                    <h4>Site Maintence</h4>
+                </article>
+                <article>
+                    <h4>Community Share Day</h4>
+                </article>
+                <article>
+                    <h4>Updated Privacy Policy</h4>
+                </article>
+
+            </div>
+
+            <div id="trending">
+                <h2>Trending</h2>
+                <a href="https://github.com/TranTrungNghiaDev/Project-Sign-up-Form" target="_blank">
+                    <img src="./icons/avatar.avif" alt="author-avatar" class="author-avatar">
+                    <section>
+                        <h4>@Nghia</h4>
+                        <p>Project Sign Up Form</p>
+                    </section>
                 </a>
-            </article>
-            <article>
-                <h3>Project Landing Page</h3>
-                <p>The basic langding page create by html and css</p>
+
+                <a href="https://github.com/TranTrungNghiaDev/Project-Calculator" target="_blank">
+                    <img src="./icons/avatar.avif" alt="author-avatar" class="author-avatar">
+                    <section>
+                        <h4>@Nghia</h4>
+                        <p>Project Calculator</p>
+                    </section>
+
+                </a>
+
                 <a href="https://github.com/TranTrungNghiaDev/Project-Landing-Page" target="_blank">
-                    <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
+                    <img src="./icons/avatar.avif" alt="author-avatar" class="author-avatar">
+                    <section>
+                        <h4>@Nghia</h4>
+                        <p>Project Langding Page</p>
+                    </section>
                 </a>
-            </article>
-            <article>
-                <h3>Project Calculator</h3>
-                <p>The basic calculator page created by html, css and js</p>
-                <a href="https://github.com/TranTrungNghiaDev/Project-Calculator">
-                    <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
-                </a>
-            </article>
-            <article>
-                <h3>Project Admin Dashboard</h3>
-                <p>The beautiful admin dashboard create by html and css</p>
-                <a>
-                    <img src="./icons/view-page.svg" alt="go-to-page" class="view-page">
-                </a>
-            </article>
+
+            </div>
         </section>
 
-        <section id="announcements">
-            <h2>Announcements</h2>
-            <article>
-                <h4>Site Maintence</h4>
-            </article>
-            <article>
-                <h4>Community Share Day</h4>
-            </article>
-            <article>
-                <h4>Updated Privacy Policy</h4>
-            </article>
-        </section>
-
-        <section id="trending">
-            <h2>Trending</h2>
-            <article>
-                <img src="./icons/avatar.avif" alt="author-avatar" class="author-avatar">
-                <h4>@Nghia</h4>
-                <p>
-                    <a href="https://github.com/TranTrungNghiaDev/Project-Sign-up-Form">
-                        Project Sign Up Form
-                    </a>
-                </p>
-            </article>
-
-            <article>
-                <img src="./icons/avatar.avif" alt="author-avatar" class="author-avatar">
-                <h4>@Nghia</h4>
-                <p>
-                    <a href="https://github.com/TranTrungNghiaDev/Project-Calculator">
-                        Project Calculator
-                    </a>
-                </p>
-            </article>
-
-            <article>
-                <img src="./icons/avatar.avif" alt="author-avatar" class="author-avatar">
-                <h4>@Nghia</h4>
-                <p>
-                    <a href="https://github.com/TranTrungNghiaDev/Project-Landing-Page">
-                        Project Langding Page
-                    </a>
-                </p>
-            </article>
-        </section>
     </main>
     <aside id="dashboard">
         <h2>Dashboard</h2>
